<resources>
    <string name="app_name">AutoServiser</string>
    <string name="login">Prijava</string>
    <string name="register">Registracija</string>
    <string name="password">Lozinka</string>
    <string name="e_mail">E-mail</string>
    <string name="mobitel">Mobitel</string>
    <string name="your_name">Ime</string>
    <string name="your_surname">Prezime</string>
    <string name="re_type_password">Ponovno unesi lozinku</string>
    <string name="home">Naslovnica</string>
    <string name="location">Lokacija</string>
    <string name="profile">Profil</string>
    <string name="cekanje">U tijeku</string>
    <string name="obavljeno">Obavljeno</string>
    <string name="editProfile">Uredi profil</string>
    <string name="saveProfile">Spremi profil</string>

    <string-array name="tipoviServisa">
        <item>Mali servis</item>
        <item>Veliki servis</item>
        <item>Servis guma</item>
    </string-array>

    <string name="swipe_left_for_register">Prijeđite prstom ulijevo za registraciju</string>
    <string name="swipe_right_for_login">Prijeđite prstom udesno za prijavu</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>