<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_shade_1"
    tools:context=".fragments.RegisterFragment">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/et_nameRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/rounded"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_surnameRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/your_surname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/rounded"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_emailRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_mobitelRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/mobitel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="number"
        android:background="@drawable/rounded"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/rounded"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_custom"
            android:text="@string/register"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/swipeLeft"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/swipe_right_for_login"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

</LinearLayout>